crates/parser/tests/cases/snapshots/cases__errors__struct_bad_field_name.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(struct_bad_field_name), module::parse_module,\n    \"struct f {\\n pub type }\")"
---
error: expected a field or function definition after `pub` or attributes
  ┌─ struct_bad_field_name:2:6
  │
2 │  pub type }
  │      ^^^^


